--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,7 +1,7 @@
 services:
-  server:
+  app:
     image: node:18
-    command: sh -c "npm run build && npm run serve"
+    command: sh -c "npm run build && npm run start"
     working_dir: /usr/src/app
     ports:
       - 3000:3000
