--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test:docker": "docker compose -f compose.test.yml up --exit-code-from test",
     "build": "tsc && tsc-alias",
     "serve": "node dist/server/app.js",
-    "serve:docker": "docker compose -f compose.dev.yml up --exit-code-from server"
+    "revalidate": "node dist/scripts/revalidate.js",
+    "start": "pm2 start ecosystem.config.js --no-daemon",
+    "start:dev": "docker compose -f compose.dev.yml up --exit-code-from app",
+    "start:prod": "pm2 start ecosystem.config.js"
   },
   "license": "AGPL-3.0-only",
   "devDependencies": {
@@ -25,6 +28,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.7.0",
+    "pm2": "^5.3.1",
     "prettier": "^3.2.4",
     "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
@@ -32,8 +36,10 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "commander": "^12.0.0",
     "cors": "^2.8.5",
     "hyper-express": "^6.14.11",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "json-stringify-deterministic": "^1.0.12"
   }
 }
