--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.6.7",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "hyper-express": "^6.14.11",
     "ioredis": "^5.3.2",
     "json-stringify-deterministic": "^1.0.12"
