--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "test": "NODE_ENV=test node --nolazy --inspect=0.0.0.0:9227 ./node_modules/.bin/jest --runInBand",
     "test:docker": "docker compose -f compose.test.yml up --exit-code-from test",
     "build": "tsc && tsc-alias",
+    "build:watch": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\")",
     "serve": "node dist/server/app.js",
     "revalidate": "node dist/scripts/revalidate.js",
-    "start": "pm2-runtime start ecosystem.config.js",
+    "start": "pm2-runtime start ecosystem.config.js --watch",
     "start:dev": "docker compose -f compose.dev.yml up",
     "start:prod": "pm2 reload ecosystem.config.js"
   },
@@ -23,6 +24,7 @@
     "@types/range-parser": "^1.2.7",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
