--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "format": "eslint . --fix",
     "test": "NODE_ENV=test node --nolazy --inspect=0.0.0.0:9227 ./node_modules/.bin/jest --runInBand",
     "test:docker": "docker compose -f compose.test.yml up --exit-code-from test",
-    "build": "tsc && tsc-alias",
-    "build:watch": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\")",
+    "build": "tsup",
+    "build:watch": "tsup --watch",
     "serve": "node dist/server/app.js",
+    "serve:dev": "npm run build:watch -- --onSuccess 'npm run serve'",
     "revalidate": "node dist/scripts/revalidate.js",
     "flushQuery": "node dist/scripts/flushQuery.js",
     "start": "pm2-runtime start ecosystem.config.js --watch",
@@ -18,6 +19,7 @@
   },
   "license": "AGPL-3.0-only",
   "devDependencies": {
+    "@chain-registry/types": "^0.18.1",
     "@types/busboy": "^1.5.3",
     "@types/cors": "^2.8.17",
     "@types/lodash.uniq": "^4.5.9",
@@ -35,11 +37,18 @@
     "pm2": "^5.3.1",
     "prettier": "^3.2.4",
     "ts-jest": "^29.1.2",
-    "tsc-alias": "^1.8.8",
+    "tsup": "^8.0.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@cosmjs/proto-signing": "^0.32.3",
+    "@cosmjs/stargate": "^0.32.3",
+    "@cosmjs/tendermint-rpc": "^0.32.3",
+    "@dao-dao/types": "^2.4.0-rc.8",
+    "@dao-dao/utils": "^2.4.0-rc.8",
+    "async-await-retry": "^2.1.0",
     "axios": "^1.6.7",
+    "chain-registry": "^1.29.1",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
