fallback to chain query for checking contract type

--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@cosmjs/cosmwasm-stargate": "^0.32.3",
+    "@cosmjs/encoding": "^0.32.3",
     "@cosmjs/proto-signing": "^0.32.3",
     "@cosmjs/stargate": "^0.32.3",
     "@cosmjs/tendermint-rpc": "^0.32.3",
