use stale-while-revalidate instead of must-revalidate, and revalidate stale queries in background worker

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build:watch": "tsup --watch",
     "serve": "node dist/server/app.js",
     "serve:dev": "npm run build:watch -- --onSuccess 'npm run serve'",
+    "process": "node dist/queues/process.js",
     "revalidate": "node dist/scripts/revalidate.js",
     "flushQuery": "node dist/scripts/flushQuery.js",
     "flushMatching": "node dist/scripts/flushMatching.js",
-    "start": "pm2-runtime start ecosystem.config.js --watch",
+    "start": "pm2-runtime start ecosystem.config.js",
     "start:dev": "docker compose -f compose.dev.yml up",
     "start:prod": "pm2 reload ecosystem.config.js"
   },
@@ -53,6 +54,7 @@
     "@dao-dao/types": "^2.4.0-rc.8",
     "@dao-dao/utils": "^2.4.0-rc.8",
     "axios": "^1.6.7",
+    "bullmq": "^5.7.12",
     "chain-registry": "^1.29.1",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
