--- a/tsup.config.json
+++ b/tsup.config.json
@@ -1,6 +1,7 @@
 {
   "entry": [
     "src/server/app.ts",
+    "src/queues/process.ts",
     "src/scripts/revalidate.ts",
     "src/scripts/flushMatching.ts",
     "src/scripts/flushQuery.ts"
