--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,7 +1,7 @@
 services:
   app:
     image: node:18
-    command: sh -c "npm install && npm run build && npm run serve:dev"
+    command: npm run build:watch -- --onSuccess 'npm run start'
     working_dir: /usr/src/app
     ports:
       - 3030:3000
