switch from hyper-express to fastify and set up background worker admin dashboard

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PORT=3000
 REDIS_URL=redis://localhost:6379
 ALLOWED_ORIGINS=http:\/\/localhost:\d+
 COINGECKO_API_KEY=
+ADMIN_DASHBOARD_PASSWORD=admin
