--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash.uniq": "^4.5.9",
     "@types/node": "^20.11.10",
     "@types/range-parser": "^1.2.7",
+    "@types/safe-compare": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "concurrently": "^8.2.2",
@@ -45,6 +46,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
+    "@bull-board/fastify": "^5.19.0",
     "@cosmjs/cosmwasm-stargate": "^0.32.3",
     "@cosmjs/encoding": "^0.32.3",
     "@cosmjs/proto-signing": "^0.32.3",
@@ -53,15 +55,17 @@
     "@dao-dao/state": "^2.4.0-rc.8",
     "@dao-dao/types": "^2.4.0-rc.8",
     "@dao-dao/utils": "^2.4.0-rc.8",
+    "@fastify/basic-auth": "^5.1.1",
+    "@fastify/cors": "^9.0.1",
     "axios": "^1.6.7",
     "bullmq": "^5.7.12",
     "chain-registry": "^1.29.1",
     "commander": "^12.0.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
-    "hyper-express": "^6.14.11",
+    "fastify": "^4.27.0",
     "ioredis": "^5.3.2",
     "json-stringify-deterministic": "^1.0.12",
-    "lodash.uniq": "^4.5.0"
+    "lodash.uniq": "^4.5.0",
+    "safe-compare": "^1.1.4"
   }
 }
