removed revalidate flag from query and revalidate script

--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "format": "eslint . --fix",
     "test": "NODE_ENV=test node --nolazy --inspect=0.0.0.0:9227 ./node_modules/.bin/jest --runInBand",
     "test:docker": "docker compose -f compose.test.yml up --exit-code-from test",
-    "build": "tsup",
+    "build": "tsc && tsup",
     "build:watch": "tsup --watch",
     "serve": "node dist/server/app.js",
     "serve:dev": "npm run build:watch -- --onSuccess 'npm run serve'",
     "process": "node dist/queues/process.js",
-    "revalidate": "node dist/scripts/revalidate.js",
     "flushQuery": "node dist/scripts/flushQuery.js",
     "flushMatching": "node dist/scripts/flushMatching.js",
     "start": "pm2-runtime start ecosystem.config.js",
