--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ HOST=0.0.0.0
 PORT=3000
 REDIS_URL=redis://localhost:6379
 ALLOWED_ORIGINS=http:\/\/localhost:\d+
-COINGECKO_API_KEY=
 ADMIN_DASHBOARD_PASSWORD=admin
+CONCURRENCY=50
+
+COINGECKO_API_KEY=
