--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "ioredis": "^5.3.2",
     "json-stringify-deterministic": "^1.0.12",
     "lodash.uniq": "^4.5.0",
+    "meilisearch": "^0.40.0",
     "safe-compare": "^1.1.4"
   }
 }
