--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 HOST=0.0.0.0
 PORT=3000
 REDIS_URL=redis://localhost:6379
-ALLOWED_ORIGINS=http:\/\/localhost:\d+
+ALLOWED_ORIGINS=http:\/\/localhost:\d+,http:\/\/127\.0\.0\.1:\d+
 ADMIN_DASHBOARD_PASSWORD=admin
 CONCURRENCY=50
 
