upgraded more packages

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "license": "AGPL-3.0-only",
   "devDependencies": {
-    "@chain-registry/types": "^0.18.1",
+    "@chain-registry/types": "^0.41.3",
     "@swc/core": "^1.4.16",
     "@types/busboy": "^1.5.3",
     "@types/cors": "^2.8.17",
     "@types/lodash.uniq": "^4.5.9",
     "@types/node": "^20.11.10",
+    "@types/pako": "^2.0.3",
     "@types/range-parser": "^1.2.7",
     "@types/safe-compare": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
@@ -41,7 +42,7 @@
     "prettier": "^3.2.4",
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
@@ -51,14 +52,14 @@
     "@cosmjs/proto-signing": "^0.32.3",
     "@cosmjs/stargate": "^0.32.3",
     "@cosmjs/tendermint-rpc": "^0.32.3",
-    "@dao-dao/state": "^2.4.2-rc.0",
-    "@dao-dao/types": "^2.4.2-rc.0",
-    "@dao-dao/utils": "^2.4.2-rc.0",
+    "@dao-dao/state": "^2.4.2-rc.1",
+    "@dao-dao/types": "^2.4.2-rc.1",
+    "@dao-dao/utils": "^2.4.2-rc.1",
     "@fastify/basic-auth": "^5.1.1",
     "@fastify/cors": "^9.0.1",
     "axios": "^1.6.7",
     "bullmq": "^5.7.12",
-    "chain-registry": "^1.29.1",
+    "chain-registry": "1.59.4",
     "commander": "^12.0.0",
     "dotenv": "^16.4.4",
     "fastify": "^4.27.0",
