added eth mainnet token prices

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ CONCURRENCY=50
 
 COINGECKO_API_KEY=
 EIGENEXPLORER_API_KEY=
+MORALIS_API_KEY=
 
 DAODAO_MEILISEARCH_HOST=
 DAODAO_MEILISEARCH_API_KEY=
