--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chain-registry": "1.59.4",
     "commander": "^12.0.0",
     "dotenv": "^16.4.4",
+    "ethers": "^6.13.4",
     "fastify": "^4.27.0",
     "ioredis": "^5.3.2",
     "json-stringify-deterministic": "^1.0.12",
