--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ ALLOWED_ORIGINS=http:\/\/localhost:\d+,http:\/\/127\.0\.0\.1:\d+
 ADMIN_DASHBOARD_PASSWORD=admin
 CONCURRENCY=50
 
+PUBLIC_KEY_FILE=key.pub.pem
+PRIVATE_KEY_FILE=key.priv.pem
+
 COINGECKO_API_KEY=
 EIGENEXPLORER_API_KEY=
 MORALIS_API_KEY=
