--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,7 +1,7 @@
 services:
   app:
-    image: node:18
-    command: npm run build:watch -- --onSuccess 'npm run start'
+    image: node:22
+    command: sh -c "npm install && npm run build:watch -- --onSuccess 'npm run start'"
     working_dir: /usr/src/app
     ports:
       - 3030:3000
