--- a/compose.test.yml
+++ b/compose.test.yml
@@ -1,7 +1,7 @@
 services:
   test:
-    image: node:18-alpine
-    command: npm run test
+    image: node:22-alpine
+    command: sh -c "npm install && npm run build && npm run test"
     working_dir: /usr/src/app
     ports:
       - 9227:9227 # debug
