--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "postinstall": "patch-package",
     "lint": "eslint .",
     "format": "eslint . --fix",
     "test": "NODE_ENV=test node --nolazy --inspect=0.0.0.0:9227 ./node_modules/.bin/jest --runInBand",
@@ -40,6 +41,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.7.0",
+    "patch-package": "^8.0.0",
     "pm2": "^5.3.1",
     "prettier": "^3.2.4",
     "ts-jest": "^29.1.2",
