--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "patch-package",
     "lint": "eslint .",
     "format": "eslint . --fix",
-    "test": "NODE_ENV=test node --nolazy --inspect=0.0.0.0:9227 ./node_modules/.bin/jest --runInBand",
+    "test": "vitest",
     "test:docker": "docker compose -f compose.test.yml up --exit-code-from test",
     "build": "tsc && tsup",
     "build:only": "tsup",
@@ -25,7 +25,8 @@
   },
   "license": "AGPL-3.0-only",
   "devDependencies": {
-    "@chain-registry/types": "^0.41.3",
+    "@chain-registry/types": "0.50.159",
+    "@dao-dao/config": "^2.7.1-rc.2",
     "@swc/core": "^1.4.16",
     "@types/busboy": "^1.5.3",
     "@types/cors": "^2.8.17",
@@ -42,31 +43,30 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "jest": "^29.7.0",
     "patch-package": "^8.0.0",
     "pm2": "^5.3.1",
     "prettier": "^3.2.4",
-    "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
     "@bull-board/fastify": "^5.19.0",
-    "@cosmjs/cosmwasm-stargate": "^0.32.3",
-    "@cosmjs/encoding": "^0.32.3",
-    "@cosmjs/proto-signing": "^0.32.3",
-    "@cosmjs/stargate": "^0.32.3",
-    "@cosmjs/tendermint-rpc": "^0.32.3",
-    "@dao-dao/state": "^2.4.2-rc.1",
-    "@dao-dao/types": "^2.4.2-rc.1",
-    "@dao-dao/utils": "^2.4.2-rc.1",
+    "@cosmjs/cosmwasm-stargate": "^0.33.1",
+    "@cosmjs/encoding": "^0.33.1",
+    "@cosmjs/proto-signing": "^0.33.1",
+    "@cosmjs/stargate": "^0.33.1",
+    "@cosmjs/tendermint-rpc": "^0.33.1",
+    "@dao-dao/state": "^2.7.1-rc.2",
+    "@dao-dao/types": "^2.7.1-rc.2",
+    "@dao-dao/utils": "^2.7.1-rc.2",
     "@fastify/basic-auth": "^5.1.1",
     "@fastify/cors": "^9.0.1",
     "@skip-go/client": "^0.16.4",
     "axios": "^1.6.7",
     "bullmq": "^5.7.12",
-    "chain-registry": "1.59.4",
+    "chain-registry": "1.69.254",
     "commander": "^12.0.0",
     "dotenv": "^16.4.4",
     "ethers": "^6.13.4",
